From version 0.8.2 to 0.8.3
- new server messages to drop calls and notify interface state changes
- publish domain routing in zeroconf for future automatic route detection

From version 0.8.1 to 0.8.2
- now requires ucommon 2.1.3 or later

From version 0.8.0 to 0.8.1
- code cleanup and opensolaris support
- now requires ucommon 2.1.2 or later

From version 0.7.5 to 0.8.0
- uses ucommon 2.1
- added notify plugin to use libnotify

From version 0.7.4 to 0.7.5
- fix init script and defaults

From version 0.7.3 to 0.7.4
- fix for default uuid system realms.
- fix for sippasswd to send digest hash to server when live.

From version 0.7.2 to 0.7.3
- sipwitch state can now show as well as set state.
- new configure split for cgi support.

From version 0.7.1 to 0.7.2
- new server history control to dump recent errlog records from daemon.
- server option to set size of errlog history.
- automatically set localnames with hostname by default.
- activate or end server sip tracing from control interface.

From version 0.7.0 to 0.7.1
- when ran in pure user mode, do not use system directories or configs.

From version 0.6.2 to 0.7.0
- integrated media proxy for NAT support.
- authentication realm and "domain" merged into single property.
- new P_SIPWITCH_NODE header to mark anonymous/off-network internodal calls.

From version 0.6.1 to 0.6.2
- only create extensions for generated accounts if using extension dialing.
- can change uid setting when server is live.
- use uuid realm if no realm is set and override with set realm when daemon.
- maintainer sipwitch config file cleaned up with saner default options.

From version 0.6.0 to 0.6.1
- fix for exec hook when ran on packaging systems that do not use fakeroot.

From version 0.5.13 to 0.6.0
- updated sipdigest to use sipwitch server library.
- introduction of separate user account digest hash database.
- digest hash database usable as an authentication source.
- new sippasswd utility to set user's digest secret.