@@ -1,6 +1,7 @@
 From version 0.8.2 to 0.8.3
 - new server messages to drop calls and notify interface state changes
 - publish domain routing in zeroconf for future automatic route detection
+- network up and down scripting to notify sipwitch on network changes
 
 From version 0.8.1 to 0.8.2
 - now requires ucommon 2.1.3 or later
